--- a/blocks/elements/__title/elements__title.css
+++ b/blocks/elements/__title/elements__title.css
@@ -1,15 +1,15 @@
 .elements__title {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin: 0 15px 0 21px;
+  margin: 0;
   padding: 0;
-  max-width: 100%;
-  min-height: 23px;
+  max-width: 220px;
+  height: 29px;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   color: #000;
 }
 
